# genLifts

./: CMakeLists.txt  README.md  run.sh
data/graphs/cage/: n1116_k5_g9.g6  n2048_k3_g17.g6  n320_k4_g10.g6  n936_k3_g16.g6
data/graphs/egr/: n100_k6_g5_l6.g6  n100_k6_g5_l7.g6  n110_k6_g5_l4.g6  n120_k6_g5_l1.g6  n155_k6_g5_l9.g6  n160_k6_g5_l2.g6  n28_k6_g4_l7.g6  n30_k4_g5_l3.g6  n30_k4_g5_l4.g6  n35_k4_g6_l15.g6  n44_k5_g5_l6.g6  n48_k4_g6_l6.g6  n48_k5_g5_l4.g6  n54_k4_g6_l7.g6  n56_k5_g5_l2.g6  n57_k4_g6_l3.g6  n60_k4_g6_l5.g6  n64_k6_g5_l10.g6  n69_k4_g6_l2.g6  n72_k4_g6_l1.g6  n80_k6_g5_l5.g6
data/graphs/kgnogpo/: n128_k5_g5.g6  n1300_k4_g9.g6  n160_k5_g5.g6  n1760_k3_g15.g6  n195_k4_g7.g6  n228_k3_g11.g6  n600_k3_g13.g6  n972_k4_g9.g6
src/: Main.cpp
src/GAP/: Automorphisms.g  Orbits.g  SmallGroups.g
src/algorithms/: BTA.cpp  BTA.h  CMakeLists.txt  Filter.cpp  Filter.h  TabuSearch.cpp  TabuSearch.h
src/algorithms/Helpers/: CostFunctions.cpp  CostFunctions.h  Lift.cpp  Lift.h  Other.cpp  Other.h  RNG.cpp  RNG.h  VertexEdgeGirthRegular.cpp  VertexEdgeGirthRegular.h
src/graph/: CMakeLists.txt  Edge.h  Graph.cpp  Graph.h  GraphParser.cpp  GraphParser.h
src/group/: CMakeLists.txt  Group.cpp  Group.h  GroupParser.cpp  GroupParser.h
src/nautyAndMultigraph/: CMakeLists.txt  gtnauty.h  gtools.c  gtools.h  gutils.h  labelg.c  labelg.h  multigraph.c  multigraph.h  naugraph.h  nautil.h  nautinv.c  nauty.c
